@@ -6,6 +6,8 @@ CHANGES
 0.4.0
 =====
 
+- setup parameter for a task should be a list - single value deprecated (#437225)
+- PythonAction support 'dependencies', 'targets', 'changed' parameters
 - added tools.create_folder (#421453)
 - deprecate folder-depenency
 - CmdActions reference to dependencies, targets and changed dependencies (#434327)
